--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
-  <html>
-    <p>Hey</p>
-  </html>
+<html>
+    
+    <head>
+        <link rel="stylesheet" href="main.css">
+        <title>Kieran Broekhoven</title>
+    </head>
+    <body>
+        <a class="resume">Resume</a>
+        <h1>Kieran Broekhoven</h1>
+        <h2>Mechatronics Engineering 
+            <br>University of Waterloo</br></h2>
+        
+    </body>
+</html>
+
