Added coop content

--- a/index.html
+++ b/index.html
@@ -6,11 +6,33 @@
         <title>Kieran Broekhoven</title>
     </head>
     <body>
-        <a class="resume">Resume</a>
         <h1>Kieran Broekhoven</h1>
         <h2>Mechatronics Engineering 
             <br>University of Waterloo</br></h2>
-        
+            <a class="resume">Resume</a>
+        <p class=intro></br></br>
+            Hi! I'm Kieran Broekhoven, a student of engineering.
+            As a mechatronics student I study software, hardware and mechanical design.
+        </p>
+
+        <div>
+            <p class=subtitle>Work Experience</p>
+            <p class=subtitle2>I have completed three co-op terms at Waterloo.</p>
+            <div ID = workexp>
+                <a class=subtitle2 href=coop3/>Radialpoint SafeCare, Inc.</a>
+                <p>Build Master Intern<br>
+                Montreal, PQ<br>
+                Summer 2015<br><br></p>
+                <a class=subtitle2 href=coop2/>Soochow University</a></br>
+                <p>Biomechanical Designer<br>
+                Suzhou, Jiangsu, China<br>
+                Fall 2014<br><br></p>
+                <a class=subtitle2 href=coop1/>UWaterloo Neurorobotics Lab</a>
+                <p>Research Assistant<br>
+                Waterloo, ON<br>
+                Winter 2014</p>
+            </div>
+        </div>
     </body>
 </html>
 
