Centered some things

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <p class=subtitle2>I have completed three co-op terms at Waterloo.</p>
             <div ID = workexp>
                 <a class=subtitle2 href=coop3/>Radialpoint SafeCare, Inc.</a>
-                <p>Build Master Intern<br>
+                <p class=intro>Build Master Intern<br>
                 Montreal, PQ<br>
                 Summer 2015<br><br></p>
                 <a class=subtitle2 href=coop2/>Soochow University</a></br>
-                <p>Biomechanical Designer<br>
+                <p class=intro>Biomechanical Designer<br>
                 Suzhou, Jiangsu, China<br>
                 Fall 2014<br><br></p>
                 <a class=subtitle2 href=coop1/>UWaterloo Neurorobotics Lab</a>
-                <p>Research Assistant<br>
+                <p class=intro>Research Assistant<br>
                 Waterloo, ON<br>
                 Winter 2014</p>
             </div>
