--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <p class=subtitle>Work Experience</p>
             <p class=subtitle2>I have completed three co-op terms at Waterloo.</p>
             <div ID = workexp>
-                <a class=subtitle2 href=coop3/>Radialpoint SafeCare, Inc.</a>
+                <a class=company href=coop3/>Radialpoint SafeCare, Inc.</a>
                 <p class=intro>Build Master Intern<br>
                 Montreal, PQ<br>
                 Summer 2015<br><br></p>
-                <a class=subtitle2 href=coop2/>Soochow University</a></br>
+                <a class=company href=coop2/>Soochow University</a></br>
                 <p class=intro>Biomechanical Designer<br>
                 Suzhou, Jiangsu, China<br>
                 Fall 2014<br><br></p>
-                <a class=subtitle2 href=coop1/>UWaterloo Neurorobotics Lab</a>
+                <a class=company href=coop1/>UWaterloo Neurorobotics Lab</a>
                 <p class=intro>Research Assistant<br>
                 Waterloo, ON<br>
                 Winter 2014</p>
