Started adding interests

--- a/index.html
+++ b/index.html
@@ -12,25 +12,50 @@
             <a class="resume">Resume</a>
         <p class=intro></br></br>
             Hi! I'm Kieran Broekhoven, a student of engineering.
-            As a mechatronics student I study software, hardware and mechanical design.
+            In mechatronics I study software, hardware and mechanical design.
         </p>
 
         <div>
-            <p class=subtitle>Work Experience</p>
-            <p class=subtitle2>I have completed three co-op terms at Waterloo.</p>
-            <div ID = workexp>
-                <a class=company href=coop3/>Radialpoint SafeCare, Inc.</a>
-                <p class=intro>Build Master Intern<br>
-                Montreal, PQ<br>
-                Summer 2015<br><br></p>
-                <a class=company href=coop2/>Soochow University</a></br>
-                <p class=intro>Biomechanical Designer<br>
-                Suzhou, Jiangsu, China<br>
-                Fall 2014<br><br></p>
-                <a class=company href=coop1/>UWaterloo Neurorobotics Lab</a>
-                <p class=intro>Research Assistant<br>
-                Waterloo, ON<br>
-                Winter 2014</p>
+            <p class="subtitle">Work Experience</p>
+            <p class="subtitle2">I have completed three co-op terms at Waterloo.</p>
+            <div ID = "workexp">
+                <a href="coop3"/><p class="company">Radialpoint SafeCare, Inc.</p></a>
+                <p class="column">
+                    Build Master Intern<br>
+                    Montreal, PQ<br>
+                    Summer 2015
+                </p>
+                <a href="coop2"/><p class="company">Soochow University</p></a>
+                <p class="column">
+                    Biomechanical Designer<br>
+                    Suzhou, Jiangsu, China<br>
+                    Fall 2014
+                </p>
+                <a href="coop1"/><p class="company">UWaterloo Neurorobotics Lab</p></a>
+                <p class="column">
+                    Research Assistant<br>
+                    Waterloo, ON<br>
+                    Winter 2014
+                </p>
+            </div>
+        </div>
+
+        <div>
+            <p class="subtitle">Interests</p>
+            <p class="subtitle2">I have a very wide variety of interests</p>
+            <div ID="interests">
+                <p class="column">
+                    <h4>Engineering Society</h4>
+                </p>
+                <p class="column">
+                    <h4>Martial Arts</h4>
+                </p>
+                <p class="column">
+                    <h4>Theatre</h4>
+                </p>
+                <p class="column">
+                    <h4>Music</h4>
+                </p>
             </div>
         </div>
     </body>
