--- a/index.html
+++ b/index.html
@@ -46,15 +46,19 @@
             <div ID="interests">
                 <p class="column">
                     <h4>Engineering Society</h4>
+                    <p class="info">I have been heavily involved with the <a href="http://engsoc.uwaterloo.ca">Engineering Society</a> at Waterloo since I started. I am currently the VP External, focusing on outreach, Waterloo Engineering Competition, and Engineering Conferences. I am also the chair of EngSoc's Board of Directors.</p>
                 </p>
                 <p class="column">
                     <h4>Martial Arts</h4>
+                    <p class="info">From the ages of 4-18 I practiced traditional martial arts. I have a second degree black belt in Goju Ryu Karate and ranks in Southern Shaolin Kung Fu and Matayoshi Shinpo Kobudo. I also enjoy Jiu Jutsu, Aikido and Judo.</p>
                 </p>
                 <p class="column">
                     <h4>Theatre</h4>
+                    <p class="info">In high school I was the director and lead actor of my high school's performances at the Ontario Sears Drama Festival. I also was part of my high school's productions of The Secret Garden and Phantom of the Opera. Here at Waterloo I have been a part of the Engineering play as well as Fiddler on the Roof.</p>
                 </p>
                 <p class="column">
                     <h4>Music</h4>
+                    <p class="info">Music is a significant part of my life. I play guitar, piano, bass, drums and several other percussion instruments. I spend a lot of my time in bands or messing around with some friends. 
                 </p>
             </div>
         </div>
