--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,3 @@
-<embed src="https://drive.google.com/file/d/0B3lw0vFsNbkFSTJyY3MycFhRc28/view?usp=sharing"width="500" height="375" type='application/pdf'>
+<object data="resume" type="application/pdf" width="300" height="862.5">
+  alt : <a href="resume">YOUR-RESUME-NAME.pdf</a>
+</object>
