Added resume link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Kieran Broekhoven</h1>
         <h2>Mechatronics Engineering 
             <br>University of Waterloo</br></h2>
-            <a class="resume">Resume</a>
+            <a class="resume" href="resume.html">Resume</a>
         <p class=intro></br></br>
             Hi! I'm Kieran Broekhoven, a student of engineering.
             In mechatronics I study software, hardware and mechanical design.
