--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,3 @@
 <object data="resume" type="application/pdf" width="300" height="862.5">
-  alt : <a href="resume">YOUR-RESUME-NAME.pdf</a>
+  alt : <a href="resume">Resume</a>
 </object>
