--- a/resume/index.html
+++ b/resume/index.html
@@ -4,9 +4,10 @@
     <head>
         <title>My Resume</title>
     </head>
-    
-    <object data="resume.pdf" type="application/pdf" width="1000" height="2875">
-        alt : <a href="resume.pdf">Resume</a>
-    </object>
+    <body>
+        <object data="resume.pdf" type="application/pdf" width="1000" height="2875">
+            alt : <a href="resume.pdf">Resume</a>
+        </object>
+    </body>
     
 </html>
