Improved UI, started adding Clearpath

--- a/resume/index.html
+++ b/resume/index.html
@@ -5,8 +5,7 @@
     <link rel="stylesheet" href="main.css">
 </HEAD>
 <BODY LANG="en-US" LINK="#0000ff" DIR="LTR">    
-    <object data="resume.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="1000">
+    <object data="resume.pdf" width="100%" height="1000">
     Sorry, your browser isn't letting you view my resume! Click<a href="resume.pdf">here</a> to download it.</object>
-
 </BODY>
 </HTML>
