--- a/index.html
+++ b/index.html
@@ -1,67 +1,40 @@
 <!DOCTYPE html>
 <html>
-    
     <head>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">          
+        <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script><link rel="stylesheet" href="main.css">
         <title>Kieran Broekhoven</title>
     </head>
     <body>
-        <h1>Kieran Broekhoven</h1>
-        <h2>Mechatronics Engineering 
-            <br>University of Waterloo</br></h2>
-            <a class="resume" href="resume">Resume</a>
-        <p class=intro></br></br>
-            Hi! I'm Kieran Broekhoven, a student of engineering.
-            In mechatronics I study software, hardware and mechanical design.
-        </p>
-
-        <div>
-            <p class="subtitle">Work Experience</p>
-            <p class="subtitle2">I have completed three co-op terms at Waterloo.</p>
-            <div ID = "workexp">
-                <a href="coop3"/><p class="company">Radialpoint SafeCare, Inc.</p></a>
-                <p class="column">
-                    Build Master Intern<br>
-                    Montreal, PQ<br>
-                    Summer 2015
-                </p>
-                <a href="coop2"/><p class="company">Soochow University</p></a>
-                <p class="column">
-                    Biomechanical Designer<br>
-                    Suzhou, Jiangsu, China<br>
-                    Fall 2014
-                </p>
-                <a href="coop1"/><p class="company">UWaterloo Neurorobotics Lab</p></a>
-                <p class="column">
-                    Research Assistant<br>
-                    Waterloo, ON<br>
-                    Winter 2014
-                </p>
-            </div>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <ul class="nav navbar-nav">
+                <li><a href="index.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="coop/index.html">Work Experience<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="coop/coop4/index.html">Clearpath</a></li>
+                        <li><a href="coop/coop3/index.html">Radialpoint, Inc.</a></li>
+                        <li><a href="coop/coop2/index.html">Soochow University</a></li>
+                        <li><a href="coop/coop1/index.html">UWaterloo Neurorobotics Lab</a></li>
+                    </ul>
+                </li>
+                <li><a href="resume/index.html">Resume</a></li>
+                <li><a href="interests/index.html">Interests</a></li>
+            </ul>
+        </nav> 
+        <br><br><h1 class="text-center">Kieran Broekhoven</h1>
+        <div class="row">
+            <div class="col-md-5 col-md-offset-1"><h2>Mechatronics Engineering</h2></div>
+            <div class="col-md-4 text-right col-md-offset-1"><h2>University of Waterloo </h2></div>
+        </div>
+        <div class="intro row vcenter">
+            <div class="col-md-9"><br>
+            Hi! Thanks for visiting. <br>I'm Kieran Broekhoven, a student of engineering.
+                In mechatronics I study software, hardware and mechanical design. I'm currently in my third of four years completing a Bachelor of Mechatronics Engineering, Co-op, with a minor in French Studies.</div>
+        <img class="pull-right" src="engsoc.png" height=200/>
         </div>
 
-        <div>
-            <p class="subtitle">Interests</p>
-            <p class="subtitle2">I have a very wide variety of interests</p>
-            <div ID="interests">
-                <p class="column">
-                    <h4>Engineering Society</h4>
-                    <p class="info">I have been heavily involved with the <a href="http://engsoc.uwaterloo.ca">Engineering Society</a> at Waterloo since I started. I am currently the VP External, focusing on outreach, Waterloo Engineering Competition, and Engineering Conferences. I am also the chair of EngSoc's Board of Directors.</p>
-                </p>
-                <p class="column">
-                    <h4>Martial Arts</h4>
-                    <p class="info">From the ages of 4-18 I practiced traditional martial arts. I have a second degree black belt in Goju Ryu Karate and ranks in Southern Shaolin Kung Fu and Matayoshi Shinpo Kobudo. I also enjoy Jiu Jutsu, Aikido and Judo.</p>
-                </p>
-                <p class="column">
-                    <h4>Theatre</h4>
-                    <p class="info">In high school I was the director and lead actor of my high school's performances at the Ontario Sears Drama Festival. I also was part of my high school's productions of The Secret Garden and Phantom of the Opera. Here at Waterloo I have been a part of the Engineering play as well as Fiddler on the Roof.</p>
-                </p>
-                <p class="column">
-                    <h4>Music</h4>
-                    <p class="info">Music is a significant part of my life. I play guitar, piano, bass, drums and several other percussion instruments. I spend a lot of my time in bands or messing around with some friends. 
-                </p>
-            </div>
-        </div>
     </body>
 </html>
 
