--- a/interests/index.html
+++ b/interests/index.html
@@ -5,6 +5,7 @@
         <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script><link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="../all.css">
+        <base href="http://www.kieranbroekhoven.com/"/>
         <title>My Interests</title>
     </head>
     <body>
