Finished Clearpath, reorganized interests

--- a/coop/coop4/index.html
+++ b/coop/coop4/index.html
@@ -29,11 +29,28 @@
         </nav>
         <br><br>
         <h1>Clearpath</h1>
-        <p>
-            For my fourth and most recent co-op term, I worked at Clearpath, formerly known as Clearpath Robotics. Clearpath is a robotics company that focuses on autonomous navigation in industrial application as well as robotics for research platforms.
-            <br><br>
-            At Clearpath I was a member of the Test and Infrastructure team, as the Test Engineering Analyst Co-op. My tasks were essentially to streamline or eliminate some of the more mundane or menial tasks of the test team. 
-            <br><br>
-            My most significant project was a robot fleet monitoring system. 
-        </p>
+        <div class="row">
+            <div class="col-md-3">
+                <img src="desk.jpg"/>
+            </div>
+            <div class="col-md-9">
+                <p>
+                    For my fourth and most recent co-op term, I worked at <a href="http://clearpath.ai">Clearpath</a>, formerly known as <a href="http://clearpathrobotics.com">Clearpath Robotics</a>. Clearpath is a robotics company that focuses on autonomous navigation in industrial application as well as robotics for research platforms.
+                    <br><br>
+                    At Clearpath I was a member of the Test and Infrastructure team, as the Test Engineering Analyst Co-op. My tasks were essentially to streamline or eliminate some of the more mundane or menial tasks of the test team. 
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-9">
+                <p>
+                    My most significant project was a robot fleet monitoring system. I designed a Django application that would poll a fleet management system and report back on it by notifying selected users of failures. 
+                    <br><br>
+                    I also worked on different extensions to the open source software <a href="https://getsentry.com">Sentry</a>. Sentry is a crash reporting system for Linux. I worked on extensions that would improve the notification system as well as the organization of the crash reports. Other tasks included log parsing and log generating.
+                </p>
+            </div>
+            <div class="col-md-3">
+                <img src="otto.jpg"/>
+            </div>
+        </div>
     </body>
