--- a/coop/coop1/index.html
+++ b/coop/coop1/index.html
@@ -9,26 +9,25 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script><link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="../../all.css">
         <title>Kieran Broekhoven</title>
-        <base href="http://www.kieranbroekhoven.com/"/>
     </head>
     
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <ul class="nav navbar-nav">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li class="dropdown">
                     <a href="coop">Work Experience<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="coop/coop4/index.html">Clearpath</a></li>
-                        <li><a href="coop/coop3/index.html">Radialpoint, Inc.</a></li>
-                        <li><a href="coop/coop2/index.html">Soochow University</a></li>
-                        <li><a href="coop/coop1/index.html">UWaterloo Neurorobotics Lab</a></li>
+                        <li><a href="../coop/coop4/index.html">Clearpath</a></li>
+                        <li><a href="../coop/coop3/index.html">Radialpoint, Inc.</a></li>
+                        <li><a href="../coop/coop2/index.html">Soochow University</a></li>
+                        <li><a href="../coop/coop1/index.html">UWaterloo Neurorobotics Lab</a></li>
                     </ul>
                 </li>
-                <li><a href="resume/index.html">Resume</a></li>
-                <li><a href="interests/index.html">Interests</a></li>
+                <li><a href="../resume/index.html">Resume</a></li>
+                <li><a href="../interests/index.html">Interests</a></li>
             </ul>
-        </nav> 
+        </nav><br><br>
         <h1>University of Waterloo Neurorobotics Lab</h1>
         <a class=email>Ben Selby</a>
         <p>
