--- a/coop/coop4/index.html
+++ b/coop/coop4/index.html
@@ -6,25 +6,24 @@
         <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script><link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="../../all.css">
-        <base href="http://www.kieranbroekhoven.com/"/>
         <title>Radialpoint, Inc.</title>
     </head>
     
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <ul class="nav navbar-nav">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li class="dropdown">
-                    <a href="coop">Work Experience<span class="caret"></span></a>
+                    <a href="../coop">Work Experience<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="coop/coop4/index.html">Clearpath</a></li>
-                        <li><a href="coop/coop3/index.html">Radialpoint, Inc.</a></li>
-                        <li><a href="coop/coop2/index.html">Soochow University</a></li>
-                        <li><a href="coop/coop1/index.html">UWaterloo Neurorobotics Lab</a></li>
+                        <li><a href="../coop/coop4/index.html">Clearpath</a></li>
+                        <li><a href="../coop/coop3/index.html">Radialpoint, Inc.</a></li>
+                        <li><a href="../coop/coop2/index.html">Soochow University</a></li>
+                        <li><a href="../coop/coop1/index.html">UWaterloo Neurorobotics Lab</a></li>
                     </ul>
                 </li>
-                <li><a href="resume/index.html">Resume</a></li>
-                <li><a href="interests/index.html">Interests</a></li>
+                <li><a href="../resume/index.html">Resume</a></li>
+                <li><a href="../interests/index.html">Interests</a></li>
             </ul>
         </nav>
         <br><br>
@@ -37,7 +36,7 @@
                 <p>
                     For my fourth and most recent co-op term, I worked at <a href="http://clearpath.ai">Clearpath</a>, formerly known as <a href="http://clearpathrobotics.com">Clearpath Robotics</a>. Clearpath is a robotics company that focuses on autonomous navigation in industrial application as well as robotics for research platforms.
                     <br><br>
-                    At Clearpath I was a member of the Test and Infrastructure team, as the Test Engineering Analyst Co-op. My tasks were essentially to streamline or eliminate some of the more mundane or menial tasks of the test team. 
+                    At Clearpath I was a member of the Test and Infrastructure team, as the Test Engineering Analyst Co-op. My tasks were essentially to streamline or eliminate some of the more mundane or menial tasks of the test team.
                 </p>
             </div>
         </div>
