Added pictures, fixed paths

--- a/coop/coop3/index.html
+++ b/coop/coop3/index.html
@@ -12,18 +12,18 @@
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <ul class="nav navbar-nav">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="../../index.html">Home</a></li>
                 <li class="dropdown">
-                    <a href="../coop">Work Experience<span class="caret"></span></a>
+                    <a href="../index.html">Work Experience<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../coop/coop4/index.html">Clearpath</a></li>
-                        <li><a href="../coop/coop3/index.html">Radialpoint, Inc.</a></li>
-                        <li><a href="../coop/coop2/index.html">Soochow University</a></li>
-                        <li><a href="../coop/coop1/index.html">UWaterloo Neurorobotics Lab</a></li>
+                        <li><a href="../coop4/index.html">Clearpath</a></li>
+                        <li><a href="../coop3/index.html">Radialpoint, Inc.</a></li>
+                        <li><a href="../coop2/index.html">Soochow University</a></li>
+                        <li><a href="../coop1/index.html">UWaterloo Neurorobotics Lab</a></li>
                     </ul>
                 </li>
-                <li><a href="../resume/index.html">Resume</a></li>
-                <li><a href="../interests/index.html">Interests</a></li>
+                <li><a href="../../resume/index.html">Resume</a></li>
+                <li><a href="../../interests/index.html">Interests</a></li>
             </ul>
         </nav>
         <br><br>
