--- a/coop/coop4/index.html
+++ b/coop/coop4/index.html
@@ -12,27 +12,28 @@
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <ul class="nav navbar-nav">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="../../index.html">Home</a></li>
                 <li class="dropdown">
-                    <a href="../coop">Work Experience<span class="caret"></span></a>
+                    <a href="../index.html">Work Experience<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../coop/coop4/index.html">Clearpath</a></li>
-                        <li><a href="../coop/coop3/index.html">Radialpoint, Inc.</a></li>
-                        <li><a href="../coop/coop2/index.html">Soochow University</a></li>
-                        <li><a href="../coop/coop1/index.html">UWaterloo Neurorobotics Lab</a></li>
+                        <li><a href="../coop4/index.html">Clearpath</a></li>
+                        <li><a href="../coop3/index.html">Radialpoint, Inc.</a></li>
+                        <li><a href="../coop2/index.html">Soochow University</a></li>
+                        <li><a href="../coop1/index.html">UWaterloo Neurorobotics Lab</a></li>
                     </ul>
                 </li>
-                <li><a href="../resume/index.html">Resume</a></li>
-                <li><a href="../interests/index.html">Interests</a></li>
+                <li><a href="../../resume/index.html">Resume</a></li>
+                <li><a href="../../interests/index.html">Interests</a></li>
             </ul>
         </nav>
         <br><br>
         <h1>Clearpath</h1>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <img src="desk.jpg"/>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8">
+                <br><br>
                 <p>
                     For my fourth and most recent co-op term, I worked at <a href="http://clearpath.ai">Clearpath</a>, formerly known as <a href="http://clearpathrobotics.com">Clearpath Robotics</a>. Clearpath is a robotics company that focuses on autonomous navigation in industrial application as well as robotics for research platforms.
                     <br><br>
@@ -41,14 +42,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-8 vcenter">
+                <br><br>
                 <p>
                     My most significant project was a robot fleet monitoring system. I designed a Django application that would poll a fleet management system and report back on it by notifying selected users of failures. 
                     <br><br>
                     I also worked on different extensions to the open source software <a href="https://getsentry.com">Sentry</a>. Sentry is a crash reporting system for Linux. I worked on extensions that would improve the notification system as well as the organization of the crash reports. Other tasks included log parsing and log generating.
                 </p>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <img src="otto.jpg"/>
             </div>
         </div>
