--- a/interests/index.html
+++ b/interests/index.html
@@ -30,35 +30,54 @@
             <p class="subtitle text-center">Interests</p>
             <p class="subtitle2">I have a very wide variety of interests!</p>
             <div class="row">
-                <div class="col-md-3">
+                <div>
                     <h4>Engineering Society</h4>
-                    <p class="info">I have been heavily involved with the <a href="http://engsoc.uwaterloo.ca">Engineering Society</a> at Waterloo since I started. I am currently the VP External, focusing on outreach, Waterloo Engineering Competition, and Engineering Conferences. I am also the chair of EngSoc's Board of Directors.</p>
+                    <p class="info">I have been heavily involved with the <a href="http://engsoc.uwaterloo.ca">Engineering Society</a> at Waterloo since I started. I am currently the VP External, focusing on outreach, Waterloo Engineering Competition, and Engineering Conferences. I am also the chair of EngSoc's Board of Directors. As VP External, I attend provincial and national conference, voting on behalf of Waterloo Engineering students on issues that arise.</p>
                 </div>
-                    <div class="col-md-3">
-                        <img class="img-responsive" src="engsoc.jpg"/>
-                    </div>
-                <div class="col-md-3">
-                    <img class="img-responsive" src="dragon.jpg"/>
+                <div class="col-md-6">
+                    <img class="img-responsive" src="essco.jpg"/>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 pull-right">
+                    <img class="img-responsive" src="engsoc.jpg"/>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div>
                     <h4>Martial Arts</h4>
                     <p class="info">From the ages of 4-18 I practiced traditional martial arts. I have a second degree black belt in Goju Ryu Karate and ranks in Southern Shaolin Kung Fu and Matayoshi Shinpo Kobudo. I also enjoy Jiu Jutsu, Aikido and Judo.</p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <img class="img-responsive" src="fiddler.jpg"/>
+                <div class="col-md-6">
+                    <img class="img-responsive" src="dragon.jpg"/>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6">
+                    <img class="img-responsive" src="sparring.jpg"/>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div>
                     <h4>Theatre</h4>
                     <p class="info">In high school I was the director and lead actor of my high school's performances at the Ontario Sears Drama Festival. I also was part of my high school's productions of The Secret Garden and Phantom of the Opera. Here at Waterloo I have been a part of the Engineering play as well as Fiddler on the Roof.</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6"><br>
+                    <img class="img-responsive" src="fiddler_russians.jpg"/>
+                </div>
+                <div class="col-md-6"><br>
+                    <img class="img-responsive" src="fiddler_guys.jpg"/>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div>
                     <h4>Music</h4>
                     <p class="info">Music is a significant part of my life. I play guitar, piano, bass, drums and several other percussion instruments. I spend a lot of my time in bands or messing around with some friends. 
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6">
                     <img class="img-responsive" src="music.jpg"/>
+                </div>
+                <div class="col-md-6">
+                    <img class="img-responsive" src="hfar.png"/>
                 </div>
             </div>
         </div>
