Improved look of work experience pages

--- a/coop/coop3/index.html
+++ b/coop/coop3/index.html
@@ -27,13 +27,25 @@
             </ul>
         </nav>
         <br><br>
-        <h1>Radialpoint SafeCare, Inc.</h1>
-            <p>
-                <br>
-                For my third co-op term I worked at Radialpoint, a software company in Montreal. <a>Radialpoint</a> primarily designs tech support software for web and mobile applications. I was a member of Radialpoint's Build Team. 
-                <br><br>
-                My day to day work included assisting developers with running their builds, which entailed debugging and configuration of build systems. My long term project was automating the process of moving virtual machine images from NAS (Network Attached Storage) to build agents (physical machines). 
-                <br><br>
-                The project was completed with a client-server application using socket programming in Python. I also utilized WSF, NSIS and other small tools to complete the task. I was also responsible for setting up a web service for the application using the company's Apache server.
-            </p>
+        <h1>RADIALPOINT SAFECARE, INC.</h1>
+        <div class="row">
+            <div class="col-md-4">
+                <img class="img-responsive" src="radialpoint.jpg"/>
+            </div>
+            <div class="col-md-8"><br><br>
+                    For my third co-op term I worked at <a href="http://radialpoint.com">Radialpoint</a>, a software company in Montreal. Radialpoint primarily designs tech support software for web and mobile applications. I was a member of Radialpoint's Build Team. 
+                    <br><br>
+                    My day to day work included assisting developers with running their builds, which entailed debugging and configuration of build systems. 
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8"><br><br>
+                    My long term project was automating the process of moving virtual machine images from NAS (Network Attached Storage) to build agents (physical machines). 
+                    <br><br>
+                    The project was completed with a client-server application using socket programming in Python. I also utilized WSF, NSIS and other small tools to complete the task. I was also responsible for setting up a web service for the application using the company's Apache server.
+            </div>
+            <div class="col-md-4">
+                <img class="img-responsive" src="interns.jpg"/>
+            </div>
+        </div>
     </body>
