--- a/interests/index.html
+++ b/interests/index.html
@@ -74,7 +74,7 @@
                     <p class="info">Music is a significant part of my life. I play guitar, piano, bass, drums and several other percussion instruments. I spend a lot of my time in bands or messing around with some friends. 
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive" src="music.jpg"/>
+                    <img class="img-responsive" src="guitar.jpg"/>
                 </div>
                 <div class="col-md-6">
                     <img class="img-responsive" src="hfar.png"/>
