Added courses, improved homepage layout

--- a/coop/coop1/index.html
+++ b/coop/coop1/index.html
@@ -26,8 +26,10 @@
                 </li>
                 <li><a href="../../resume/index.html">Resume</a></li>
                 <li><a href="../../interests/index.html">Interests</a></li>
+                <li><a href="../../courses/index.html">Courses</a></li>
             </ul>
-        </nav><br><br>
+        </nav>
+        
         <h1>UNIVERSITY OF WATERLOO NEUROROBOTICS LAB</h1>
         <div class="row">
             <div class="col-md-8">
