--- a/coop/coop2/index.html
+++ b/coop/coop2/index.html
@@ -24,8 +24,10 @@
                 </li>
                 <li><a href="../../resume/index.html">Resume</a></li>
                 <li><a href="../../interests/index.html">Interests</a></li>
+                <li><a href="../../courses/index.html">Courses</a></li>
             </ul>
-        </nav><br><br>
+        </nav>
+        
         <div class="row">
             <h1>Soochow University Orthopaedics Institute</h1>
             <img src="pano.jpg" class="header"/>
