--- a/coop/coop4/index.html
+++ b/coop/coop4/index.html
@@ -24,9 +24,10 @@
                 </li>
                 <li><a href="../../resume/index.html">Resume</a></li>
                 <li><a href="../../interests/index.html">Interests</a></li>
+                <li><a href="../../courses/index.html">Courses</a></li>
             </ul>
         </nav>
-        <br><br>
+
         <h1>Clearpath</h1>
         <div class="row">
             <div class="col-md-4">
