--- a/coop/index.html
+++ b/coop/index.html
@@ -22,11 +22,11 @@
                         <li><a href="coop/coop1/index.html">UWaterloo Neurorobotics Lab</a></li>
                     </ul>
                 </li>
-                <li><a href="resume/index.html">Resume</a></li>
-                <li><a href="interests/index.html">Interests</a></li>
+                <li><a href="../resume/index.html">Resume</a></li>
+                <li><a href="../interests/index.html">Interests</a></li>
+                <li><a href="../courses/index.html">Courses</a></li>
             </ul>
         </nav> 
-        <br><br>
         <h1 class="text-center">Work Experience</h1>
         <p class="subtitle2">At Waterloo Engineering, we alternate between 4 months study terms and four month works terms. Co-op has given me the opportunity to travel, improve my entrepreneurial knowledge and apply the theoretical skills I learned in class to real work. <br><br>I've completed four work terms to date:</p>
         <div class="row">
