--- a/interests/index.html
+++ b/interests/index.html
@@ -22,13 +22,12 @@
                 </li>
                 <li><a href="../resume/index.html">Resume</a></li>
                 <li><a href="../interests/index.html">Interests</a></li>
+                <li><a href="../courses/index.html">Courses</a></li>
             </ul>
         </nav> 
         
         <div>
-            <br><br>
-            <p class="subtitle text-center">Interests</p>
-            <p class="subtitle2">I have a very wide variety of interests!</p>
+            <h1 class="text-center">Interests</h1>
             <div class="row">
                 <div>
                     <h4>Engineering Society</h4>
