--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">          
         <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script><link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="all.css">
         <title>Kieran Broekhoven</title>
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="nav_item">Home</a></li>
                 <li class="dropdown">
                     <a href="coop/index.html">Work Experience<span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -21,18 +22,27 @@
                 </li>
                 <li><a href="resume/index.html">Resume</a></li>
                 <li><a href="interests/index.html">Interests</a></li>
+                <li><a href="courses/index.html">Courses</a></li>
             </ul>
         </nav> 
-        <br><br><h1 class="text-center">Kieran Broekhoven</h1>
-        <div class="row">
-            <div class="col-md-5 col-md-offset-1"><h2>Mechatronics Engineering</h2></div>
-            <div class="col-md-4 text-right col-md-offset-1"><h2>University of Waterloo </h2></div>
-        </div>
+        
+        <h1 class="text-center">KIERAN BROEKHOVEN</h1>
+        <h3 class="text-right">Mechatronics Engineering, University of Waterloo</h3>
         <div class="intro row vcenter">
+            <div class="col-md-3">
+                <img class="img-responsive" src="face.jpg"/>
+            </div>
             <div class="col-md-9"><br>
-            Hi! Thanks for visiting. <br>I'm Kieran Broekhoven, a student of engineering.
-                In mechatronics I study software, hardware and mechanical design. I'm currently in my third of four years completing a Bachelor of Mechatronics Engineering, Co-op, with a minor in French Studies.</div>
-        <img class="pull-right" src="engsoc.png" height=200/>
+                Hi! Thanks for visiting. <br><br>I'm Kieran Broekhoven, a student of engineering.
+                In mechatronics I study software, hardware and mechanical design. I'm currently in my third of four years completing a Bachelor of Mechatronics Engineering, Co-op, with a minor in French Studies.<br><br>
+                I am actively involved in my school's Engineering Society, and spend my spare time as a musician, actor and athlete.<br><br>
+                <div class="text-center">
+                    <a href="resume/index.html" class="btn btn-primary link">Resume</a>
+                    <a href="courses/index.html" class="btn btn-primary link">Courses</a><br><br>
+                    <a href="coop/index.html" class="btn btn-primary link">Work Experience</a>
+                    <a href="interests/index.html" class="btn btn-primary link">Interests</a>
+                </div>
+            </div>
         </div>
 
     </body>
