--- a/courses/index.html
+++ b/courses/index.html
@@ -67,7 +67,7 @@
             <div class="col-md-7">
                 <p class="text-center">Main skills gained:</p>
                 <p class="skills">C++ | AutoCAD | SolidWorks</p>
-                <p>In 1A we are introduced to the very fundementals of engineering. We learned the necessary math and chemistry for more advanced courses, as well as the basics of programming.<br><br>In MTE 100 we were introduced to mechatronics, as well as engineering graphics using both freehand sketching as well as CAD. The pictures Lego robot was my first introduction to an engineering project - a robot that could drive around and should ping pong balls into cups.</p>
+                <p>In 1A we are introduced to the very fundementals of engineering. We learned the necessary math and chemistry for more advanced courses, as well as the basics of programming.<br><br>In MTE 100 we were introduced to mechatronics, as well as engineering graphics using both freehand sketching as well as CAD. The pictures Lego robot was my first introduction to an engineering project - a robot that could drive around and shoot ping pong balls into cups.</p>
                 <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-CHE.html#CHE102">CHE 102: Chemistry for Engineers</a><br>
                 <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-GENE.html#GENE121">GENE 121: Digital Computation</a><br>
                 <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MATH.html#MATH115">MATH 115: Linear Algebra for Engineering</a><br>
