Fixed paths on co-op page

--- a/coop/index.html
+++ b/coop/index.html
@@ -6,20 +6,19 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script><link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="../all.css">
         <title>Kieran Broekhoven</title>
-        <base href="http://www.kieranbroekhoven.com/"/>
     </head>
 
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <ul class="nav navbar-nav">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li class="dropdown">
                     <a href="coop">Work Experience<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="coop/coop4/index.html">Clearpath</a></li>
-                        <li><a href="coop/coop3/index.html">Radialpoint, Inc.</a></li>
-                        <li><a href="coop/coop2/index.html">Soochow University</a></li>
-                        <li><a href="coop/coop1/index.html">UWaterloo Neurorobotics Lab</a></li>
+                        <li><a href="coop4/index.html">Clearpath</a></li>
+                        <li><a href="coop3/index.html">Radialpoint, Inc.</a></li>
+                        <li><a href="coop2/index.html">Soochow University</a></li>
+                        <li><a href="coop1/index.html">UWaterloo Neurorobotics Lab</a></li>
                     </ul>
                 </li>
                 <li><a href="../resume/index.html">Resume</a></li>
@@ -32,7 +31,7 @@
         <div class="row">
             <div class="col-md-3">
                 <p>
-                    <a href="coop/coop4/index.html">Clearpath</a><br>
+                    <a href="coop4/index.html">Clearpath</a><br>
                     Test Engineering Analyst<br>
                     Kitchener, ON<br>
                     Winter 2016
@@ -46,17 +45,18 @@
             </div>
             <div class="col-md-3">
                 <p class="text-right">
-                    <a href="coop/coop3/index.html">Radialpoint SafeCare, Inc.</a><br>
+                    <a href="coop3/index.html">Radialpoint SafeCare, Inc.</a><br>
                     Build Master Intern<br>
                     Montreal, PQ<br>
                     Summer 2015
                 </p>
             </div>
         </div>
+        <br><br>
         <div class="row">
             <div class="col-md-3">
                 <p>
-                    <a href="coop/coop2/index.html">Soochow University</a><br>
+                    <a href="coop2/index.html">Soochow University</a><br>
                     Biomechanical Designer<br>
                     Suzhou, Jiangsu, China<br>
                     Fall 2014
@@ -70,7 +70,7 @@
             </div>
             <div class="col-md-3">
                 <p class="text-right">
-                    <a href="coop/coop1/index.html">UWaterloo Neurorobotics Lab</a><br>
+                    <a href="coop1/index.html">UWaterloo Neurorobotics Lab</a><br>
                     Research Assistant<br>
                     Waterloo, ON<br>
                     Winter 2014
