--- a/interests/index.html
+++ b/interests/index.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div>
                     <h4>Engineering Society</h4>
-                    <p class="info">I have been heavily involved with the <a href="http://engsoc.uwaterloo.ca">Engineering Society</a> at Waterloo since I started. I am currently the VP External, focusing on outreach, Waterloo Engineering Competition, and Engineering Conferences. I am also the chair of EngSoc's Board of Directors. As VP External, I attend provincial and national conference, voting on behalf of Waterloo Engineering students on issues that arise.</p>
+                    <p class="info">I have been heavily involved with the <a href="http://engsoc.uwaterloo.ca">Engineering Society</a> at Waterloo since I started. I am currently the VP External, focusing on outreach, the Waterloo Engineering Competition, and Engineering Conferences. I am also the chair of EngSoc's Board of Directors. As VP External, I attend provincial and national conferences, voting on behalf of Waterloo Engineering students on issues that arise.</p>
                 </div>
                 <div class="col-md-6">
                     <img class="img-responsive" src="essco.jpg"/>
