Made coop images responsive

--- a/coop/coop1/index.html
+++ b/coop/coop1/index.html
@@ -41,7 +41,7 @@
                 ROS's navigation stack uses costs assigned to each point in 2D space to determine optimal paths. We optimized this for crowd movement by assigning a greater cost to points in the path of moving objects than in their current place. 
             </div>
             <div class="col-md-4">
-                <img src="tbot.png"/>
+                <img class="img-responsive" src="tbot.png"/>
             </div>
         </div>
     </body>
