--- a/coop/coop3/index.html
+++ b/coop/coop3/index.html
@@ -46,7 +46,7 @@
                     The project was completed with a client-server application using socket programming in Python. I also utilized WSF, NSIS and other small tools to complete the task. I was also responsible for setting up a web service for the application using the company's Apache server.
             </div>
             <div class="col-md-3">
-                <img class="img-responsive" src="interns.jpg"/>
+                <img class="img-responsive" class="img-responsive" src="interns.jpg"/>
             </div>
         </div>
     </body>
