--- a/coop/coop4/index.html
+++ b/coop/coop4/index.html
@@ -31,7 +31,7 @@
         <h1>Clearpath</h1>
         <div class="row">
             <div class="col-md-4">
-                <img src="desk.jpg"/>
+                <img class="img-responsive" src="desk.jpg"/>
             </div>
             <div class="col-md-8">
                 <br><br>
@@ -52,7 +52,7 @@
                 </p>
             </div>
             <div class="col-md-4">
-                <img src="otto.jpg"/>
+                <img class="img-responsive" src="otto.jpg"/>
             </div>
         </div>
     </body>
