Improved home page

--- a/index.html
+++ b/index.html
@@ -25,14 +25,24 @@
                 <li><a href="courses/index.html">Courses</a></li>
             </ul>
         </nav> 
-        
-        <h1 class="text-center">KIERAN BROEKHOVEN</h1>
-        <h3 class="text-right">Mechatronics Engineering, University of Waterloo</h3>
+        <div class="header row-fluid">
+                <h1 class="text-center"><br>KIERAN BROEKHOVEN</h1>
+                <div>
+                    <ul class="subtitle">
+                        <li></li>
+                        <li>Performer</li>
+                        <li>Mechatronics Engineer</li>
+                        <li>Adventurer</li>
+                        <li></li>
+                    </ul>
+            </div>
+        </div><br>
         <div class="intro row vcenter">
+            <div class="col-md-1"></div>
             <div class="col-md-3">
                 <img class="img-responsive" src="face.jpg"/>
             </div>
-            <div class="col-md-9"><br>
+            <div class="col-md-6 text-center"><br>
                 Hi! Thanks for visiting. <br><br>I'm Kieran Broekhoven, a student of engineering.
                 In mechatronics I study software, hardware and mechanical design. I'm currently in my third of four years completing a Bachelor of Mechatronics Engineering, Co-op, with a minor in French Studies.<br><br>
                 I am actively involved in my school's Engineering Society, and spend my spare time as a musician, actor and athlete.<br><br>
@@ -43,8 +53,8 @@
                     <a href="interests/index.html" class="btn btn-primary link">Interests</a>
                 </div>
             </div>
-        </div>
-
+        </div>      
+        <br>
     </body>
 </html>
 
