Fixed resume and linkedin button

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <p>Don't hesitate to reach out about anything! I'm always happy to meet new people.</p>
             <p><a href="mailto:kieran.broekhoven@gmail.com">kieran.broekhoven@gmail.com</a>
             <p class="phone">(519) 572 - 1785</p>
-            <button href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg contact-button"></button>
+            <a href="http://www.linkedin.com/in/kieran-broekhoven-951b1388" target="_blank" class="btn btn-default btn-lg contact-button"></a>
         </section>
         
         <footer>
