Moved resume icon to top left, made courses more opaque in front of logo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
         <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
             <div class="container">
+                    <div class="collapse navbar-collapse navbar-left navbar-main-collapse">
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a class="page-scroll" href="resume/index.html">Resume</a>
+                            </li>
+                        </ul>
+                    </div>
                 <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                     <ul class="nav navbar-nav">
                         <li class="hidden">
@@ -29,9 +36,6 @@
                         </li>
                         <li>
                             <a class="page-scroll" href="#interests">Interests</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="resume/index.html">Resume</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="#contact">Contact</a>
@@ -132,7 +136,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="term">
+                        <div class="term term-middle">
                             <h4> 3A | Summer 2016 </h4>
                             <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-ECE.html#ECE309" class="btn" target="_blank">ECE 309: Thermo & Heat Transfer</a><br>
                             <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-ME.html#ME321" class="btn" target="_blank">ME 321: Machine Design</a><br>
@@ -164,7 +168,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="term">
+                        <div class="term term-middle">
                             <h4>1B | Summer 2014</h4>
                             <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MATH.html#MATH118" class="btn" target="_blank">MATH 118: Calculus 2 for Engineering</a><br>
                             <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE111" class="btn" target="_blank">MTE 111: Material Science</a><br>
