--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="hovereffect">
-                            <img src="interests/engsoc.jpg" class="img-responsive interests-img">
+                            <img src="engsoc.jpg" class="img-responsive interests-img">
                             <div class="overlay"><p>I have been heavily involved with the <a href="http://engsoc.uwaterloo.ca">Engineering Society</a> at Waterloo since I started. I served 16 months as the VP External, sitting on the Engineering Student Societies' Council of Ontario and the Canadian Federation of Engineering Students. My other positions within EngSoc have included Speaker, chair of the Board of Directors, director of several events, </p></div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="hovereffect">
-                            <img src="interests/guitar.jpg" class="img-responsive interests-img">
+                            <img src="guitar.jpg" class="img-responsive interests-img">
                             <div class="overlay"><p>Music has been a big part of my life for a long time - I'm most likely to be found playing in a band or messing around with some friends. I play guitar, piano, bass, drums and several other percussion instruments.</p></div>
                         </div>
                     </div>
@@ -210,13 +210,13 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="hovereffect">
-                            <img src="interests/fiddler_russians.jpg" class="img-responsive interests-img">
+                            <img src="fiddler_russians.jpg" class="img-responsive interests-img">
                             <div class="overlay"><p>In high school I was the director and lead actor of my high school's performances at the Ontario Sears Drama Festival. I also was part of my high school's productions of The Secret Garden and Phantom of the Opera. Here at Waterloo I have been a part of the Engineering play as well as Fiddler on the Roof.</p></div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="hovereffect">
-                            <img src="interests/sparring.jpg" class="img-responsive interests-img">
+                            <img src="sparring.jpg" class="img-responsive interests-img">
                             <div class="overlay"><p>From the ages of 4-18 I practiced traditional martial arts. I have a second degree black belt in Goju Ryu Karate and ranks in Southern Shaolin Kung Fu and Matayoshi Shinpo Kobudo. I also enjoy Jiu Jutsu, Aikido and Judo.</p></div>
                         </div>
                     </div>
